--- a/sass/_fitio/_custom.scss
+++ b/sass/_fitio/_custom.scss
@@ -142,6 +142,31 @@ main {
   }
 }
 
+// Display form message as part of pt-main contents in order to scroll on
+// mobile view
+.form-message-container {
+  width: 420px;
+  margin: 10px auto 0;
+
+  @media(max-width: $screen-xs-max) {
+    width: 90%;
+  }
+
+  .form-message {
+    position: inherit;
+    top: auto;
+    left: auto;
+  }
+}
+
+.main_block .subscribe + div.form-message-container {
+  display: none;
+}
+
+.main_block .subscribe.open + div.form-message-container {
+  display: block;
+}
+
 // Customised background theme for fitio
 .fitio_bg {
   background-color: $fitio-color;
