--- a/sass/_fitio/_variables.scss
+++ b/sass/_fitio/_variables.scss
@@ -16,4 +16,4 @@ $input-color-placeholder: #eee;
 //##
 
 // Minimum height of main container in order to scroll the contents
-$min-height: 480px;
+$min-height: 550px;
